--- a/WebContent/WEB-INF/topbar.xhtml
+++ b/WebContent/WEB-INF/topbar.xhtml
@@ -65,12 +65,18 @@ a:hover {
 
 
 				</ul></li>
+			<li><a href="#" onClick="window.open('https://1drv.ms/b/s!ApXziCCsEe2mg54KViazVC86gORjxA?e=b8xw4O','Onedrive','resizable,height=260,width=370'); return false;"> <i
+					class="fa fa-fw fa-sign-out"></i> <span class="topbar-item-name"
+					style="font-size: 15px; font-weight: bold;font-size:large;">Manual</span>
+					<!--  <span class="topbar-badge animated rubberBand">2</span> -->
+			</a></li>
 			<li><a href="#"
 				onclick="javascript:logout('#{request.contextPath}')"> <i
 					class="fa fa-fw fa-sign-out"></i> <span class="topbar-item-name"
 					style="font-size: 15px; font-weight: bold;font-size:large;">Logout</span>
 					<!--  <span class="topbar-badge animated rubberBand">2</span> -->
 			</a></li>
+			
 			<!-- <li><a href="#"> <span class="topbar-item-name"
 					style="font-weight: bold; font-size: 15px; margin-left: auto; margin-right: auto; text-align: center;">Ultimo
 						Acesso do Usuário: <h:outputText
