--- a/WebContent/cadastro/findEspecialidade.xhtml
+++ b/WebContent/cadastro/findEspecialidade.xhtml
@@ -17,6 +17,14 @@
 	font-weight: bold
 }
 
+active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    border: 1px solid #79b7e7;
+    background: lightgreen;
+    font-weight: bold;
+    color: #e17009;
+}
+
+
 .ui-fluid .ui-inputmask {
 	font-size: 20px;
 	width: 100%;
