--- a/WebContent/cadastro/findUsuario.xhtml
+++ b/WebContent/cadastro/findUsuario.xhtml
@@ -16,6 +16,13 @@
 	font-weight: bold
 }
 
+active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    border: 1px solid #79b7e7;
+    background: lightgreen;
+    font-weight: bold;
+    color: #e17009;
+}
+
 .ui-selectoneradio label {
 	cursor: pointer;
 	display: inline-block;
@@ -77,14 +84,6 @@
 	height: 33px;
 	font-size: 20px;
 	text-align: center;
-}
-
-.ui-autocomplete-panel .ui-autocomplete-table th, .ui-autocomplete-panel .ui-autocomplete-table td {
-    border-width: 1px;
-    border-style: solid;
-    border-color: inherit;
-    padding: 4px 10px 4px 10px;
-    font-size: large;
 }
 
 .ui-selectoneradio label {
