--- a/WebContent/prontuario/prontuarioMedico.xhtml
+++ b/WebContent/prontuario/prontuarioMedico.xhtml
@@ -116,7 +116,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 			<br />
 
 			<!-- GUIA DE CONSULTA -->
-			<h:form	>
+			<h:form id="guia"	>
 				<ui:include src="/prontuario/guiaConsulta.xhtml" />
 			</h:form>
 
