--- a/WebContent/cadastro/findConvenio.xhtml
+++ b/WebContent/cadastro/findConvenio.xhtml
@@ -16,6 +16,14 @@
 	font-weight: bold
 }
 
+active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    border: 1px solid #79b7e7;
+    background: lightgreen;
+    font-weight: bold;
+    color: #e17009;
+}
+
+
 .ui-fluid .ui-inputmask {
 	font-size: 20px;
 	width: 100%;
@@ -86,8 +94,8 @@
 										background-color: greenyellow; 
 										color:white !important;
 										font-size:large; "
-										action="#{convenioBean.novo}" rendered="#{contextoBean.possuiAcesso('MOV_CON', 'ATE', 'ADMIN')}" immediate="true"
-										icon="fa fa-plus" iconPos="right" />
+										action="#{convenioBean.novo}" rendered="false" immediate="true"
+										icon="fa fa-plus" iconPos="right"  />
 								</div>
 								<div class="ui-g-12 ui-lg-1 ui-sm-12 ui-md-12">
 									<p:commandButton id="botaoEditar" value="Editar"
