--- a/WebContent/cadastro/findEstoquista.xhtml
+++ b/WebContent/cadastro/findEstoquista.xhtml
@@ -16,6 +16,13 @@
 	font-weight: bold
 }
 
+active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    border: 1px solid #79b7e7;
+    background: lightgreen;
+    font-weight: bold;
+    color: #e17009;
+}
+
 .ui-selectoneradio label {
 	cursor: pointer;
 	display: inline-block;
